--- a/mainWindow.html
+++ b/mainWindow.html
@@ -5,5 +5,21 @@
 </head>
 <body>
     <h1>To Do</h1>
+    <hr/>
+    <ul>
+    </ul>
+
+<script>
+    const electron = require('electron');
+    const {ipcRenderer} = electron;
+    const ul = document.querySelector('ul');
+
+    ipcRenderer.on('item:add', function(e, item){
+        const li = document.createElement('li');
+        const itemText = document.createTextNode(item);
+        li.appendChild(itemText);
+        ul.appendChild(li)
+    })
+</script>
 </body>
 </html>
