--- a/mainWindow.html
+++ b/mainWindow.html
@@ -20,6 +20,10 @@
         li.appendChild(itemText);
         ul.appendChild(li)
     })
+
+    ipcRenderer.on('item:clear', ()=>{
+        ul.innerHTML = '';
+    })
 </script>
 </body>
 </html>
