--- a/addWindow.html
+++ b/addWindow.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Add To Do Item</title>
 </head>
 <body>
-    <form>
-        <div>
-            <label>Enter Item</label>
-            <input type="text" id="item" autofocus>
-        </div>
-        <button type="submit">Add Item</button>
-    </form>
+    <div class="container">
+        <form>
+            <div>
+                <label>Enter Item</label>
+                <input type="text" id="item" autofocus>
+            </div>
+            <button type="submit" class="waves-effect waves-light btn">Add Item</button>
+        </form>
+    </div>
+
 
     <script>
         const electron = require('electron');
